deploy: 696c8478d45f3e84fd324942cf67b57b1907ec3e

--- a/index.html
+++ b/index.html
@@ -46,6 +46,21 @@
 <div class=article-content>
 <article>
 <h2>
+<a href=https://blog.jinreal.com/posts/uf-material-60/>
+【非真實地場】資料(60)
+</a>
+</h2>
+<div>
+<p>長距離的奔跑並不那麼可怕，這種線路讓人感覺無法預測、無法準備。看看他接的那些球，他時而像海綿組成的高牆，吸收著加速度，時而像移動的捕手，像抓棒球一樣抓住每個角度。再看看他回的球，好像幼兒園的娃娃一樣在亂扔，模式複雜而無法把握。這不是比賽，但差距已經使這對抗像遊戲一樣。他這種水平還需要睜眼嗎？我在幻想。
+再看看對手，陌生。地球上的場地，像走在火星上一樣陌生。他們是一個區的，曾經跟隨一個教練，對手還認識他嗎，我開始懷疑。</p>
+</div>
+<div class=post-footer>
+<time>September 30, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
 <a href=https://blog.jinreal.com/posts/uf-material-59/>
 【非真實地場】資料(58)
 </a>
@@ -166,32 +181,6 @@
 </h2>
 <div>
 <p>是你，是你，都是你。</p>
-</div>
-<div class=post-footer>
-<time>September 30, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-material-50/>
-【非真實地場】資料(50)
-</a>
-</h2>
-<div>
-<p>彎道、角度，方程式賽車的核心，人人皆知，他想。
-「直線？你說的是。。直線？」他說。
-「這裡」她抽出另一本薄薄的书，翻到其中一頁遞給他。
-「 我飛在缺少直線的世界
-就像畫著缺少橫豎的字符
-斜穿再斜穿
-拐彎再拐彎
-旋轉再旋轉
-我感覺到絕對的距離
-感觉不到相对的坐標 確定的航區 退化成不定的航線
-我逐渐分不清
-这是運輸的旅程
-还是折返的訓練 」</p>
 </div>
 <div class=post-footer>
 <time>September 30, 2021</time>
