--- a/index.html
+++ b/index.html
@@ -51,7 +51,11 @@
 </a>
 </h2>
 <div>
-<p>我在哪裡，那裡就是世界。</p>
+<p>有一個類別，你曾經忘記。
+從明天起，請你練習回憶。
+&ndash;人類。
+不確定世界是否存在？
+我在哪裡，哪裡就是世界。</p>
 </div>
 <div class=post-footer>
 <time>September 30, 2021</time>
