--- a/index.html
+++ b/index.html
@@ -46,6 +46,22 @@
 <div class=article-content>
 <article>
 <h2>
+<a href=https://blog.jinreal.com/posts/uf-material-64/>
+【非真實地場】資料(63)
+</a>
+</h2>
+<div>
+<p>「這種文體，有點痴痴的感覺了，像是小孩的咿咿呀呀」她說。
+「恩，小白體就是這種感覺」他說。
+「那時還沒出現大白體」他說。</p>
+</div>
+<div class=post-footer>
+<time>October 1, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
 <a href=https://blog.jinreal.com/posts/uf-material-63/>
 【非真實地場】資料(63)
 </a>
@@ -181,20 +197,6 @@ by H·&mldr; &mldr;</p>
 </h2>
 <div>
 <p>&ldquo;你的靈魂便是整個世界。"&ndash;H· &mldr; &mldr;</p>
-</div>
-<div class=post-footer>
-<time>September 30, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-material-54/>
-【非真實地場】資料(53)
-</a>
-</h2>
-<div>
-<p>那些年，我像一列長長的列車，充滿動力。</p>
 </div>
 <div class=post-footer>
 <time>September 30, 2021</time>
