deploy: 977e1e1dfa639ded0c8d257b3b5e3d8a8ca810f6

--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
 <article>
 <h2>
 <a href=https://blog.jinreal.com/posts/uf-material-64/>
-【非真實地場】資料(63)
+【非真實地場】資料(64)
 </a>
 </h2>
 <div>
 <p>「這種文體，有點痴痴的感覺了，像是小孩的咿咿呀呀」她說。
 「恩，小白體就是這種感覺」他說。
-「那時還沒出現大白體」他說。</p>
+「那時還沒出現大白體」他接著說。</p>
 </div>
 <div class=post-footer>
 <time>October 1, 2021</time>
