--- a/index.html
+++ b/index.html
@@ -46,6 +46,30 @@
 <div class=article-content>
 <article>
 <h2>
+<a href=https://blog.jinreal.com/posts/uf-material-65/>
+【非真實地場】資料(65)
+</a>
+</h2>
+<div>
+<p>「LIAR」J說。
+「典型的」A說。
+「軍事打印機？你聽說過嗎，居然還簡稱軍打，哈哈哈」J說。 「估計是個想考軍事學校的軍事迷」A說。
+「看他那樣子，體型好像還行，大腦，估計他沒有」J說。
+「人家靠小腦，他不是還炫耀自己加法好嗎？加減乘除的霸。。霸王」A說。
+「王者」J說。
+「哦對，加減乘除的王者，哈哈哈哈」A說。
+「哈哈，這種人，一看就似乎沒參加過高端的比賽」J說。
+「肯定是的」A說。
+「意淫而已」J說。
+「絕對的」A說。</p>
+</div>
+<div class=post-footer>
+<time>October 1, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
 <a href=https://blog.jinreal.com/posts/uf-material-64/>
 【非真實地場】資料(64)
 </a>
@@ -183,20 +207,6 @@ by H·&mldr; &mldr;</p>
 <p>「準確的說，不叫飄搖」S說。
 製造超長的奔跑距離，讓對手感覺像在看不到頭的跑道上奔跑。V和D看著Q的跑位。
 「空之飄渺！這就是傳說中的空之飄渺！」D叫著。</p>
-</div>
-<div class=post-footer>
-<time>September 30, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-material-55/>
-【非真實地場】資料(55)
-</a>
-</h2>
-<div>
-<p>&ldquo;你的靈魂便是整個世界。"&ndash;H· &mldr; &mldr;</p>
 </div>
 <div class=post-footer>
 <time>September 30, 2021</time>
