--- a/index.html
+++ b/index.html
@@ -46,6 +46,22 @@
 <div class=article-content>
 <article>
 <h2>
+<a href=https://blog.jinreal.com/posts/uf-material-70/>
+【非真實地場】資料(69)
+</a>
+</h2>
+<div>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+天下著毛毛雨，人們看起來都匆匆忙忙。
+最近訓練這麼多，該好好犒勞下自己了。她想。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+</div>
+<div class=post-footer>
+<time>October 6, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
 <a href=https://blog.jinreal.com/posts/uf-material-69/>
 【非真實地場】資料(69)
 </a>
@@ -185,28 +201,6 @@
 &ndash;人類。
 不確定世界是否存在？
 我在哪裡，哪裡就是世界。</p>
-</div>
-<div class=post-footer>
-<time>September 30, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-material-61/>
-【非真實地場】資料(61)
-</a>
-</h2>
-<div>
-<p>「姿勢、態度，一種叫作姿態的東西。真正的女人，就像一本書，從表面能看到她的姿態，以及他所處環境的姿態」D說。
-「環境的姿態？」N問。
-「哦，是的，我是說，國家的姿態」D問。
-「國家的姿態？你是說歷史？」N問。
-「歷史和現在，衰弱和繁榮。一幅對女人的畫像，可能就是對國家的畫像」D說。
-「真的是，還有歡樂和痛苦，那些美麗，那些印象」N問。
-「是的，印象派，或是唯美派，一樣。有什麼比自己的民族更美呢，除了民族，還有什麼是印象的容器呢」D說。
-「如果一個民族沒有一幅代表他們的女人的畫像，這個民族一定沒有靈魂」N說。
-「當然」D說。</p>
 </div>
 <div class=post-footer>
 <time>September 30, 2021</time>
