deploy: 1bff34e00f5fd04f026eecdb4f0c3a4a16a856d9

--- a/index.html
+++ b/index.html
@@ -67,10 +67,12 @@
 </a>
 </h2>
 <div>
-<p>不同的人評價一流產品：
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+不同的人評價一流產品：
 專家&ndash;這個東西的強項是。。弱項是。。
 愛好者&ndash;這個東西的強項是。。
-既非專家也非愛好者&ndash;這個東西沒有強項。</p>
+既非專家也非愛好者&ndash;這個東西沒有強項。
+=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
 <time>October 6, 2021</time>
