--- a/index.html
+++ b/index.html
@@ -46,6 +46,24 @@
 <div class=article-content>
 <article>
 <h2>
+<a href=https://blog.jinreal.com/posts/uf-material-71/>
+【非真實地場】資料(70)
+</a>
+</h2>
+<div>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+她最近總在背後說我妝化得太濃，說了那麼多遍，我當然知道她和以前不一樣。是什麼原因？我不知道。
+和大家一樣，我對她不了解。她長得不那麼突出，估計家庭也一般，肯定很不容易。
+我只了解這些。他說這是嫉妒，他說這顯然是她嫉妒我。這個世界是怎麼了？一個男人教我理解女人的心理？
+我說我沒想這些，他氣沖沖的對我說：虛偽！ =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+</div>
+<div class=post-footer>
+<time>October 6, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
 <a href=https://blog.jinreal.com/posts/uf-material-70/>
 【非真實地場】資料(69)
 </a>
@@ -188,24 +206,6 @@
 </div>
 <div class=post-footer>
 <time>October 1, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-material-62/>
-【非真實地場】資料(62)
-</a>
-</h2>
-<div>
-<p>有一個類別，你曾經忘記。
-從明天起，請你練習回憶。
-&ndash;人類。
-不確定世界是否存在？
-我在哪裡，哪裡就是世界。</p>
-</div>
-<div class=post-footer>
-<time>September 30, 2021</time>
 <a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
 </div>
 </article>
