--- a/index.html
+++ b/index.html
@@ -46,13 +46,28 @@
 <div class=article-content>
 <article>
 <h2>
+<a href=https://blog.jinreal.com/posts/uf-material-72/>
+【非真實地場】資料(72)
+</a>
+</h2>
+<div>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+這個角色可能不適合她。當然這意味著她可能不夠專業。她家庭條件不錯？我知道。他究竟想听真話還是好聽的話？ =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+</div>
+<div class=post-footer>
+<time>October 6, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
 <a href=https://blog.jinreal.com/posts/uf-material-71/>
 【非真實地場】資料(70)
 </a>
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-她最近總在背後說我妝化得太濃，說了那麼多遍，我當然知道她和以前不一樣。是什麼原因？我不知道，我沒去了解。
+她最近總和其他人說我妝化得太濃，說了那麼多遍，我當然知道她和以前不一樣。是什麼原因？我不知道，我沒去了解。
 和大家一樣，我對她不了解。她長得不那麼突出，估計家庭也一般，肯定很不容易。
 我只了解這些。他說這是嫉妒，他說這顯然是她嫉妒我。這個世界是怎麼了？一個男人教我理解女人的心理？
 我說我沒想這些，他氣沖沖的對我說：虛偽！我真不知道該說什麼。
@@ -189,21 +204,6 @@
 <p>「這種文體，有點痴痴的感覺了，像是小孩的咿咿呀呀」她說。
 「恩，小白體就是這種感覺」他說。
 「那時還沒出現大白體」他接著說。</p>
-</div>
-<div class=post-footer>
-<time>October 1, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-material-63/>
-【非真實地場】資料(63)
-</a>
-</h2>
-<div>
-<p>「你是否。。是否見過天空」他問我。
-我像個占星學家，每天關注著星星和月亮，關注著太陽。看見天空？那是多久以前的事情？天空，是從那以後我不敢想像的空間。也許星星、月亮、太陽有一天也會讓我感到過於熟悉和親密。我會忘掉它們，就像忘掉那天以前的事情。我將像其他人一樣，關注道路和果實，追趕和種植。我種下的是什麼？慾望或是理想，種子或是花瓣，我分不清，一點也分不清。</p>
 </div>
 <div class=post-footer>
 <time>October 1, 2021</time>
