deploy: 56a1cdad3ee01f32de33eb8f2b08ca2910b3032c

--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-這個角色可能不適合她。當然這意味著她可能不夠專業。她家庭條件不錯？我知道。他究竟想听真話還是好聽的話？ =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+「這詩字數很少，有沒有可能是作者湊出來的」A說。
+「詩都是湊出來的，只是湊的和上帝比較近」X說。
+=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
 <time>October 6, 2021</time>
@@ -62,15 +64,12 @@
 <article>
 <h2>
 <a href=https://blog.jinreal.com/posts/uf-material-71/>
-【非真實地場】資料(70)
+【非真實地場】資料(71)
 </a>
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-她最近總和其他人說我妝化得太濃，說了那麼多遍，我當然知道她和以前不一樣。是什麼原因？我不知道，我沒去了解。
-和大家一樣，我對她不了解。她長得不那麼突出，估計家庭也一般，肯定很不容易。
-我只了解這些。他說這是嫉妒，他說這顯然是她嫉妒我。這個世界是怎麼了？一個男人教我理解女人的心理？
-我說我沒想這些，他氣沖沖的對我說：虛偽！我真不知道該說什麼。
+我有方向感，在指南針出現之前。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
@@ -81,7 +80,7 @@
 <article>
 <h2>
 <a href=https://blog.jinreal.com/posts/uf-material-70/>
-【非真實地場】資料(69)
+【非真實地場】資料(70)
 </a>
 </h2>
 <div>
