--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
 「這詩字數很少，有沒有可能是作者湊出來的」A說。
-「詩都是湊出來的，只是湊的和上帝比較近」X說。
+「詩都是湊出來的，只是湊的和上帝比較近些」X說。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
