--- a/index.html
+++ b/index.html
@@ -46,6 +46,23 @@
 <div class=article-content>
 <article>
 <h2>
+<a href=https://blog.jinreal.com/posts/uf-material-73/>
+【非真實地場】資料(73)
+</a>
+</h2>
+<div>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+&ldquo;1.Know it works. 2.Know how it works."&ndash;Ano&mldr; &mldr;
+&ldquo;1.知道它行. 2.知道它為什麼行&rdquo;&ndash;安&mldr; &mldr;
+=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+</div>
+<div class=post-footer>
+<time>October 7, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
 <a href=https://blog.jinreal.com/posts/uf-material-72/>
 【非真實地場】資料(72)
 </a>
@@ -187,22 +204,6 @@
 </h2>
 <div>
 <p> </p>
-</div>
-<div class=post-footer>
-<time>October 1, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-material-64/>
-【非真實地場】資料(64)
-</a>
-</h2>
-<div>
-<p>「這種文體，有點痴痴的感覺了，像是小孩的咿咿呀呀」她說。
-「恩，小白體就是這種感覺」他說。
-「那時還沒出現大白體」他接著說。</p>
 </div>
 <div class=post-footer>
 <time>October 1, 2021</time>
