--- a/index.html
+++ b/index.html
@@ -46,6 +46,20 @@
 <div class=article-content>
 <article>
 <h2>
+<a href=https://blog.jinreal.com/posts/uf-material-74/>
+【非真實地場】資料(74)
+</a>
+</h2>
+<div>
+<p>&ldquo;幸福是一種方法，不是一樣東西。是一種才能，不是一個目標。"&ndash;H· &mldr; &mldr;</p>
+</div>
+<div class=post-footer>
+<time>October 7, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
 <a href=https://blog.jinreal.com/posts/uf-material-73/>
 【非真實地場】資料(73)
 </a>
@@ -192,20 +206,6 @@
 </div>
 <div class=post-footer>
 <time>October 2, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-material-65/>
-【非真實地場】資料(65)
-</a>
-</h2>
-<div>
-<p> </p>
-</div>
-<div class=post-footer>
-<time>October 1, 2021</time>
 <a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
 </div>
 </article>
