deploy: 19fa2b1a1571cb5ad74917413ea655f4dbc80500

--- a/index.html
+++ b/index.html
@@ -46,6 +46,22 @@
 <div class=article-content>
 <article>
 <h2>
+<a href=https://blog.jinreal.com/posts/uf-material-75/>
+【非真實地場】資料(75)
+</a>
+</h2>
+<div>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+「水真清！」女兒說。
+=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+</div>
+<div class=post-footer>
+<time>October 7, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
 <a href=https://blog.jinreal.com/posts/uf-material-74/>
 【非真實地場】資料(74)
 </a>
@@ -191,29 +207,9 @@
 <a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
 </div>
 </article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-on-culture/>
-【非真實地場】文化
-</a>
-</h2>
-<div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-「化即chemistry，文化即文明之化合反應，眾分子間之反應。」
-=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-「Chemical reaction? So we need a chemist professor?」B說。
-「Anyone work in the industry is enough」W說。
-「And alchemy!」H說。
-「I know」A說。</p>
-</div>
-<div class=post-footer>
-<time>October 2, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
 </div>
 <div class=paginator>
-<p>Page 1 of 11</p>
+<p>Page 1 of 12</p>
 <div class=paginator-group>
 <a class="color-link older" href=/page/2/>
 Older<svg width="13" height="9" viewBox="0 0 13 9" xmlns="https://www.w3.org/2000/svg" xmlns:xlink="https://www.w3.org/1999/xlink"><g class="color-arrow" fill="#63bda2" fill-rule="nonzero"><polygon points="7.6707477 1.37628835 8.3292523 0.623711653 12.7592994 4.50000282 8.32918951 8.37629079 7.67069049 7.62370921 11.2407006 4.49999718"/><polygon id="Path" points="0 5 0 4 12 4 12 5"/></g></svg>
