--- a/index.html
+++ b/index.html
@@ -46,36 +46,29 @@
 <div class=article-content>
 <article>
 <h2>
+<a href=https://blog.jinreal.com/posts/uf-material-78/>
+【非真實地場】資料(77)
+</a>
+</h2>
+<div>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+&ldquo;慾望是缺乏了解的產物。"&ndash;托&mldr; &mldr;
+=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+</div>
+<div class=post-footer>
+<time>October 8, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
 <a href=https://blog.jinreal.com/posts/uf-material-77/>
 【非真實地場】資料(77)
 </a>
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-「我對你的感覺。。好像。。可能不是愛」X說。
-「你怎麼不早說？」A說。
-「這是第一次單獨見面，也是我第一次說對你的感覺，難道還不夠早嗎」X說。
-「你說這。。太早？你不是很忙，有很大的事業和理想嗎？」X說。
-「我不忙，那個項目早著呢」A說。
-「那你是什麼意思？」X說。
-「你說話吞吞吐吐的，需要磨練」A說。
-「你是說我。。說的。。不清楚？」X說。
-「意思。。恩。。好像也清楚，就是，太慢。。恩，語速太慢」A說。
-「我一直這樣，你和我電話聊了那麼久，難道不記得了？」X說。
-「記得記得，就是覺得你這樣的人，真少見，說話這麼慢，事情總是猶猶豫豫的」A說。
-「我一直這樣」X說。
-「你看，你就那麼幾句話，女人嘛，太悶，不一定招男人喜歡喲」A說。
-「什麼叫招男人喜歡？」X說。
-「算了，估計你一輩子也不會懂。反正。。至少，客套話不能太少，你這麼悶，說不定別人背後會。。」A邊說邊笑。
-「你說別人會背地裡笑話我？什麼意思？」X說。
-「哎，沒什麼意思，就是說你的性格。。怪怪的」A說。
-「怪？你是說我悶吧，每個人。。每個人都這麼說我，我也不知道。。能不能改得了。。我經常愁這個問題」X說。
-「看我這樣多好，做人嘛，想那麼多幹嘛？做人嘛，要開朗，每天開心。。最重要嘍」A說。
-「謝謝你，位置這麼高了還麻煩你關心我」X說。
-「不高不高。不過也就是做了管理，才懂得這些」A說。
-「主要是你說有大項目，估計很難」X說。
-「不難不難，公司那些項目都不難，小case」A說。
-「哦」X說。
+「如果我都不知道自己是誰，怎麼知道你是誰？」S說。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
@@ -212,23 +205,6 @@
 </div>
 <div class=post-footer>
 <time>October 6, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-material-68/>
-【非真實地場】資料(68)
-</a>
-</h2>
-<div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-「我仿效她寫的」她說。
-仿效？他像第一次聽到這個詞一樣。仿照、模仿，這是寫作者經常使用的詞。她的文字和她的話一樣，似乎來自從未見過的世界，又似乎和某個世界有點兒像。
-=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
-</div>
-<div class=post-footer>
-<time>October 2, 2021</time>
 <a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
 </div>
 </article>
