deploy: c98d75d91967afe68721778ff5d0c7f4c24319d8

--- a/index.html
+++ b/index.html
@@ -46,6 +46,24 @@
 <div class=article-content>
 <article>
 <h2>
+<a href=https://blog.jinreal.com/posts/uf-material-82/>
+【非真實地場】資料(82)
+</a>
+</h2>
+<div>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+喜劇&ndash;一種藝術。在演出進行時劇院有兩種角色：演員與觀眾。
+觀眾的特點是：很少說話，通常很多笑，發生在任何想笑的時候。
+演員的特點是：一直說話，通常很少笑，只發生在需要的時候。
+=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+</div>
+<div class=post-footer>
+<time>October 9, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
 <a href=https://blog.jinreal.com/posts/uf-material-81/>
 【非真實地場】資料(81)
 </a>
@@ -211,23 +229,6 @@
 </div>
 <div class=post-footer>
 <time>October 7, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-material-72/>
-【非真實地場】資料(72)
-</a>
-</h2>
-<div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-「這詩字數很少，有沒有可能是作者湊出來的」A說。
-「詩都是湊出來的，只是可能湊的和上帝更近些」X說。
-=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
-</div>
-<div class=post-footer>
-<time>October 6, 2021</time>
 <a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
 </div>
 </article>
