deploy: 9362fb398945cac92cc2d631ebf5edd2bd8a6f34

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-「你如果有妹妹需要，我能教」U說。
-「啊？你怎麼不早說？你這個女人」S說。
+「我来自共和国」他說。
+「看起来很巧，我也是」她說。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
