--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-&ldquo;最足以顯示一個人的性格的，莫過於他所嘲笑的是什麼東西了。"&ndash;Go&mldr; &mldr;
+&ldquo;感覺並不會詐欺，判斷卻會。"&ndash;Go&mldr; &mldr;
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
