deploy: 1988f75911e1055ef3d9fb876805cc37ae23db47

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
 「我不是無神論者」R說。
-「你怎麼不早說？小姑娘你怎麼這樣」X說。
+「你怎麼不早說？小姑娘你怎麼這樣」C說。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
