--- a/index.html
+++ b/index.html
@@ -46,6 +46,42 @@
 <div class=article-content>
 <article>
 <h2>
+<a href=https://blog.jinreal.com/posts/uf-on-composition/>
+【非真實地場】構成
+</a>
+</h2>
+<div>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+「我呼吸故我在」
+=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+「文明。。一種混合物」C說。
+「去呼吸。。並不需要了解空氣的組成」C說。
+「所以化學家不是必要的？」C說。
+「只是一種本能」C說。
+「或者我們需要一個呼吸系統的專家？」C說。</p>
+</div>
+<div class=post-footer>
+<time>October 11, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
+<a href=https://blog.jinreal.com/posts/uf-material-107/>
+【非真實地場】資料(107)
+</a>
+</h2>
+<div>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+</div>
+<div class=post-footer>
+<time>October 11, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
 <a href=https://blog.jinreal.com/posts/uf-material-106/>
 【非真實地場】資料(106)
 </a>
@@ -214,38 +250,6 @@
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
 &ldquo;生命對它那一絲不苟的形態表示戰栗。"&ndash;Tom&mldr; &mldr;
-=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
-</div>
-<div class=post-footer>
-<time>October 10, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-material-98/>
-【非真實地場】資料(98)
-</a>
-</h2>
-<div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-偉大和虛偽的關係&ndash;理論的第一堂課。偉大的作品反映虛偽，我的第一常識，我與西方理論的第一次接觸。這次接觸如此深刻，就像接觸宇宙，我聞到的是太空中戰爭、血液、悲劇的味道，一種真理的味道。這次接觸如此親密，它到現在仍然在閃現。
-=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
-</div>
-<div class=post-footer>
-<time>October 10, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-material-97/>
-【非真實地場】資料(97)
-</a>
-</h2>
-<div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-平底，流行而休閒。我對高跟感到厭倦，是我心裡沒底嗎？我不知道，我只知道太時尚的往往不是好女人，這是我童年被教導的。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
