deploy: eedf6473f4c6b5d0c8cfdc7f92baf67b1fb5e1ea

--- a/index.html
+++ b/index.html
@@ -46,6 +46,22 @@
 <div class=article-content>
 <article>
 <h2>
+<a href=https://blog.jinreal.com/posts/uf-on-today/>
+【非真實地場】現在
+</a>
+</h2>
+<div>
+<p>「Backbone is framework」L說。
+「True」D說。
+「骨頭就是架子」A低聲重複著。這意味著，擁有骨頭就有架子。但現在的世界裡，骨頭和架子顯然不同。</p>
+</div>
+<div class=post-footer>
+<time>October 11, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
 <a href=https://blog.jinreal.com/posts/uf-on-now/>
 【非真實地場】現在
 </a>
@@ -234,22 +250,6 @@
 「我覺得我可能是喜歡光，哦不，我是指你的眼光」他說。
 「什麼眼光？」她說。
 「那種冷。。很冷的眼光」他說。
-=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
-</div>
-<div class=post-footer>
-<time>October 10, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-material-100/>
-【非真實地場】資料(100)
-</a>
-</h2>
-<div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-&ldquo;與智慧相伴的是真理，智慧只存在於真理中。"&ndash;弗&mldr; &mldr;
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
