--- a/index.html
+++ b/index.html
@@ -46,6 +46,24 @@
 <div class=article-content>
 <article>
 <h2>
+<a href=https://blog.jinreal.com/posts/uf-on-class/>
+【非真實地場】類別
+</a>
+</h2>
+<div>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+「人以群聚，物以類分」
+=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+「典型的一類描寫」Y說。
+「是的，飛行類心理描寫」Z說。</p>
+</div>
+<div class=post-footer>
+<time>October 11, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
 <a href=https://blog.jinreal.com/posts/uf-on-today/>
 【非真實地場】今天
 </a>
@@ -238,22 +256,6 @@
 「我覺得我可能是喜歡光，哦不，我是指你的眼光」他說。
 「什麼眼光？」她說。
 「那種冷。。很冷的眼光」他說。
-=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
-</div>
-<div class=post-footer>
-<time>October 10, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-material-100/>
-【非真實地場】資料(100)
-</a>
-</h2>
-<div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-&ldquo;與智慧相伴的是真理，智慧只存在於真理中。"&ndash;弗&mldr; &mldr;
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
