--- a/index.html
+++ b/index.html
@@ -54,8 +54,9 @@
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
 「人以群聚，物以類分」
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-「典型的一類描寫」Y說。
-「是的，飛行類心理描寫」Z說。</p>
+「動物以類別來劃分」G說。
+「是同一類的文學」Z說。
+「飛行類文學」Y說。</p>
 </div>
 <div class=post-footer>
 <time>October 11, 2021</time>
