deploy: c2a5520a446d848bc3429ca367bbb2fc26b1721c

--- a/index.html
+++ b/index.html
@@ -65,6 +65,24 @@
 </article>
 <article>
 <h2>
+<a href=https://blog.jinreal.com/posts/uf-material-108/>
+【非真實地場】資料(108)
+</a>
+</h2>
+<div>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+飛機這種製品一定是仿照我們製造出來的。這種對比無比明顯，甚至常常顯得可怕。
+腳，在這種仿製品中被人類稱作起落架的東西。
+你知道，當我飛得很低的時候，很可能會遇見起飛的飛機。我總是忍不住去看飛機的腳，與我們腳的位置和功能如此相像，但又不太一樣。
+那種收腳的動作，像極了我們起飛前的準備動作，卻緩慢得讓我窒息，估計是故意這樣製作的，對，一定是的。人類如此聰明，每種怪異的東西都是用力製造而充滿魔力。你仔細看，有些腳居然同向收起，哦我是指向前收，向前收！你相信嗎？我的天！聰明而可怕的人類，真不知道他們以後會做出什麼樣的東西來。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+</div>
+<div class=post-footer>
+<time>October 11, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
 <a href=https://blog.jinreal.com/posts/uf-on-today/>
 【非真實地場】今天
 </a>
@@ -221,42 +239,6 @@
 「就是總是讓人哭，或者總是讓人笑的電影」小男孩說。
 「傻孩子，人家說的是文學作品，你就會搗亂」小男孩的媽媽說。
 「非常好，一個相當準確的定義，儘管對象不是文本」講者說。
-=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
-</div>
-<div class=post-footer>
-<time>October 10, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-material-101/>
-【非真實地場】資料(101)
-</a>
-</h2>
-<div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-「你。。喜歡我哪方面？」她說。
-「為什麼，為什麼問這個問題？」他說。
-「我只是好奇」她說。
-「哪方面我都喜歡，這還用問嗎？」他說。
-「再說我是個客觀的人，從來都是全面的看事情，你說的好像我是個片面的人」他接著說。
-「你和男人也這麼說話？」她說。
-「當然了，你又不是沒見過」他說。
-「算了，還是我問的不好」她說。
-「你有時候真是奇怪」他說。
-「部位，你喜歡我哪個部位？你們還能談論什麼」她說。
-「你。。這算什麼問題？」他說。
-「我知道你們談論什麼」她說。
-「哎。。你真是難為人」他說。
-「是嗎」她說。
-「真的。這個問題是必須的嗎？」他說。
-「對」她說。
-「讓我想想」他說。
-「恩」她說。
-「我覺得我可能是喜歡光，哦不，我是指你的眼光」他說。
-「什麼眼光？」她說。
-「那種冷。。很冷的眼光」他說。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
