--- a/index.html
+++ b/index.html
@@ -46,6 +46,37 @@
 <div class=article-content>
 <article>
 <h2>
+<a href=https://blog.jinreal.com/posts/uf-material-109/>
+【非真實地場】資料(109)
+</a>
+</h2>
+<div>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+「有時候很滿意，有時候感覺很不滿意」他說。
+「不用擔心」她說。
+「不用擔心文字的質量」她接著說。
+「哦？」他說。
+「就像米粒，成熟的米粒總是有大有小」她說。
+「我寫的這些，總是感覺還能改得更好些」他說。 「很正常，你才剛開始寫，文字是真實的就好」她說。
+「你是說我寫的還行？」他說。 「These are real」她說。
+「但是。。我聽有些人說，一流的作家結構以及每個章節都很好，同樣，二流的作家，每個章節都很差」他說。
+「他們不是專家，就像並不是每個吃飯的人都熟悉米」她說。
+「你是說農民，還是農業專家？」他說。
+「我是說和麥子一起生活的人，他們一眼就能看出，米粒裡相對的大和小」她說。
+「精確的大小。。那需要儀器吧」他說。
+「我是指觀察，不依賴工具的觀察」她說。
+「你是說直覺」他說。
+「是的，專家應該有感覺，在不依賴統計分析的情況下」她說。
+「對對，真的是」他說。
+=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+</div>
+<div class=post-footer>
+<time>October 12, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
 <a href=https://blog.jinreal.com/posts/uf-on-class/>
 【非真實地場】類別
 </a>
@@ -216,29 +247,6 @@
 「阿姨，你怎麼總這麼說叔叔」小女孩說。
 「切，他根本不懂文學！」女的說。
 「她根本不懂種樹」男的說。
-=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
-</div>
-<div class=post-footer>
-<time>October 10, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-material-102/>
-【非真實地場】資料(102)
-</a>
-</h2>
-<div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-「大家覺得什麼樣的作品算是經典」講者問。
-一個小男孩舉起了手，他媽媽連忙拽住他。
-「請他說」講者說。
-「讓他說？他太小了」媽媽說。
-「是的，是他」講者說。
-「就是總是讓人哭，或者總是讓人笑的電影」小男孩說。
-「傻孩子，人家說的是文學作品，你就會搗亂」小男孩的媽媽說。
-「非常好，一個相當準確的定義，儘管對象不是文本」講者說。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
