--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-無腳巨類，這是我們的叫法。它的腳大部分時間是隱形的，你知道。
-與我們不同，無腳巨類的翅和身常常幾乎是白色的，也就是說，它的顏色和水泥地頗為接近，這使他們即使在地面上也和建築物有些像。
-移動的建築物，這是我們的感覺。當它們停下來的時候下方有空隙，只有腳在支撐著它們，這是它們和建築物有區別的地方。
-人類通常把我們和飛機相比，似乎是同類，而我們通常不認為和它很像，它們不像我們的同類，這不僅是大小的區別。
+人造巨類，這是我們的叫法。它的腳大部分時間是隱形的，你知道。
+與我們不同，人造巨類的翅和身常常幾乎是白色的，也就是說，它的顏色和水泥地頗為接近，這使他們即使在地面上也和建築物很像。
+移動的建築物，這是我們看到的。當它們停下來的時候下方有空隙，只有腳在支撐著它們，這是它們和建築物有區別的地方。
+人類通常把我們和人造巨類相比，似乎當作同類，而我們通常不認為和它們很像，它們不像我們的同類，這不僅是大小的區別。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
@@ -75,18 +75,30 @@
 「不用擔心」她說。
 「不用擔心文字的質量」她接著說。
 「哦？」他說。
-「就像米粒，成熟的米粒總是有大有小，但它們都擁有質量」她說。
-「怎麼說呢？我寫的這些，總是感覺還能改得更好些」他說。 「很正常，你才剛開始寫，文字是真實的就好」她說。
-「你還是在說風格，這些文字的風格」他說。 「These are real」她說。
-「但是。。我聽有些人說，一流的作家結構以及每個章節都很好，同樣，二流的作家，每個章節都很差」他說。
+「就像米粒，成熟的米總是有大有小，但每一個都擁有質量」她說。
+「怎麼說呢？我寫的這些，總是感覺還能改得更好些」他說。 「很正常，你才剛開始寫」她說。
+「你還是在說風格，這些文字的風格」他說。
+「差不多是」她說。
+「但是。。我聽有些人說，一流的作家結構以及每個章節都很好，同樣，二流的作家，結構以及每個章節都很差」他說。
 「他們不熟悉寫作，就像並不是每個吃飯的人都熟悉米」她說。
+「你還是在說風格，這些文字的風格」他說。
+「每部作品、每個章節的質量都一樣，也許只有機器才能寫出來」她說。
+「你是說他們說的那種特徵，只存在於機器的模仿中」他說。
+「是的。一樣大小的米，不是天然的米」她說。 「是被製造出來的，而我們討論的作品。。」他說。
+「These are real」她指著一段很普通的文字說。
+「你的感覺，太不可思議」他說。
+「只有天才才有這種感覺」他說。
+「不，熟悉米的人都會有這種感覺，或多或少」她說。
 「你是說農民，還是農業專家？」他說。
 「我是說和麥子一起生活的人，他們一眼就能看出，米粒裡相對的大和小」她說。
 「精確的大小。。那需要儀器吧」他說。
-「我是指觀察，不依賴工具的觀察」她說。
-「你是說直覺」他說。
-「是的，專家應該有感覺，在不依賴統計分析的情況下」她說。
-「真是這樣」他說。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+「相對的，不需要絕對的大小」她說。
+「一種觀察」他說。 「對，不依賴工具的觀察」她說。
+「直覺，你是說直覺」他說。
+「是的，專家應該有感覺，在不依賴測量和計算的情況下」她說。
+「測量和計算，也就是統計分析」他說。
+「處理、挖掘、提取、分析、智能之類的」她說。
+「我知道了」他說。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
 <time>October 12, 2021</time>
