--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
 「差不多是」她說。
 「但是。。我聽有些人說，一流的作家結構以及每個章節都很好，同樣，二流的作家，結構以及每個章節都很差」他說。
 「他們不熟悉寫作，就像並不是每個吃飯的人都熟悉米」她說。
-「你還是在說風格，這些文字的風格」他說。
-「每部作品、每個章節的質量都一樣，也許只有機器才能寫出來」她說。
-「你是說他們說的那種特徵，只存在於機器的模仿中」他說。
-「是的。一樣大小的米，不是天然的米」她說。 「是被製造出來的，而我們討論的作品。。」他說。
+「如果每部作品、每個章節的質量都一樣，也許只有機器才能寫出來」她說。
+「你是說他們說的那種特徵，只存在於機器的模仿中？」他說。
+「是的。一樣大小的米，不可能是天然的米」她說。
+「是被製造出來的，而我們討論的作品。。」他說。
 「These are real」她指著一段很普通的文字說。
 「你的感覺，太不可思議」他說。
 「只有天才才有這種感覺！」他接著說。
@@ -98,7 +98,8 @@
 「是的，專家應該有感覺，在不依賴測量和計算的情況下」她說。
 「測量和計算，也就是統計分析」他說。
 「處理、挖掘、提取、分析、智能之類的」她說。
-「我知道了」他說。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+「我知道了」他說。
+=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
 <time>October 12, 2021</time>
