deploy: 32fad5987486fb93b0ea9399d15b00520d574eaa

--- a/index.html
+++ b/index.html
@@ -46,6 +46,26 @@
 <div class=article-content>
 <article>
 <h2>
+<a href=https://blog.jinreal.com/posts/uf-on-language/>
+【非真實地場】語言
+</a>
+</h2>
+<div>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+成熟的米總是有大有小，但每一個都擁有質量&mldr;一樣大小的米，不可能是天然的米 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+「或許這就是天然和人工的區別？」X說。
+「自然語言和人工語言的區別」B說。
+「這也是為什麼有時候人工語言不像語言，有時候又太像語言」N說。
+「有時候差異太大，有時候又太相似」F說。
+「好極了」T說。</p>
+</div>
+<div class=post-footer>
+<time>October 12, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
 <a href=https://blog.jinreal.com/posts/uf-material-110/>
 【非真實地場】資料(110)
 </a>
@@ -230,22 +250,6 @@
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
 &ldquo;我過去是，現在仍然是一個探索者，但是我不再占星問道，我開始傾聽內心深處的低語。"&ndash;H·&mldr; &mldr;
-=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
-</div>
-<div class=post-footer>
-<time>October 10, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-material-104/>
-【非真實地場】資料(104)
-</a>
-</h2>
-<div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-&ldquo;充實的思想不在於言語的富麗，它引以自傲的是內容，不是虛飾。"&ndash;S&mldr; &mldr;
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
