--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
 成熟的米總是有大有小，但每一個都擁有質量&mldr;一樣大小的米，不可能是天然的米 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
 「或許這就是天然和人工的區別？」X說。
-「自然語言和人工語言的區別」B說。
-「這也是為什麼有時候人工語言不像語言，有時候又太像語言」N說。
+「你是在說自然語言的本質」B說。
+「也就是為什麼有時候人工語言不像語言，有時候又太像語言？」N說。
 「有時候差異太大，有時候又太相似」F說。
-「好極了」Z說。</p>
+「很好」Z說。</p>
 </div>
 <div class=post-footer>
 <time>October 12, 2021</time>
