--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
 &ldquo;明白這一點就行了，在我們自身內有一個人甚麼都知道，什麼都想要，什麼都比我們自己做得更好。&rdquo;
-&ldquo;这是深秋的生命里遇见生命的深秋。&rdquo;
+&ldquo;這是深秋的生命裡遇見生命的深秋。&rdquo;
 &ndash;H·&mldr; &mldr;
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
