deploy: a3bf391cf59f7872438c9014bb9fc086f3d143a3

--- a/index.html
+++ b/index.html
@@ -97,6 +97,26 @@
 </article>
 <article>
 <h2>
+<a href=https://blog.jinreal.com/posts/uf-on-container/>
+【非真實地場】容器
+</a>
+</h2>
+<div>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+宗教是精神的容器 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+精神活動活躍的區域，就像數據中心。房間&ndash;一個大容器，裡面充滿了小容器&ndash;機架，機架上通常也擺滿了機器。
+「沒有機房，就像個人主機散落在一個個家庭、企業的房間裡，在僅有局域網絡的情況下，它們怎麼能協同計算呢？」S說。
+「甚至，連網吧都不如，更不用談數據中心了」D說。
+「就像早期只有性能很一般的個人電腦，甚至只有大型機，不可能有具有規模的分佈式處理」K說。
+V看到一段冰上運動的資料，突然想到一個朋友的父親，他是個體育教練，好像是訓練跑步的，當時體育數據分析還很初步甚至沒有。他工作的地方有一堆計時器、計步器等等。計數器和計步器&ndash;微型的機器，集中存放這些機器的地方也是討論專業訓練的地方，話題通常和極限、科學、以及人性有關，當然，需要討論的可能沒有團隊運動裡那麼多。</p>
+</div>
+<div class=post-footer>
+<time>October 12, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
 <a href=https://blog.jinreal.com/posts/uf-on-language/>
 【非真實地場】語言
 </a>
@@ -224,27 +244,6 @@
 <p>「Backbone is framework」L說。
 「True」D說。
 「骨頭就是架子」A低聲重複著。這意味著，擁有骨頭就有架子。但在今天的世界裡，骨頭和架子顯然不同。</p>
-</div>
-<div class=post-footer>
-<time>October 11, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-on-composition/>
-【非真實地場】構成
-</a>
-</h2>
-<div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-我呼吸故我在
-=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-「文明。。一種混合物」E說。
-「而呼吸。。並不需要了解空氣的組成」T說。
-「所以化學家不是必要的？」C說。
-「只是一種本能」A說。
-「或者我們需要一個呼吸系統的專家？」J說。</p>
 </div>
 <div class=post-footer>
 <time>October 11, 2021</time>
