--- a/index.html
+++ b/index.html
@@ -46,6 +46,22 @@
 <div class=article-content>
 <article>
 <h2>
+<a href=https://blog.jinreal.com/posts/uf-material-117/>
+【非真實地場】資料(117)
+</a>
+</h2>
+<div>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+謬論，數位化的真理，一種有理數。小數點之前是簡短的真話，之後永遠循環着謊言。它孜孜不倦的冒充著自然。
+=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+</div>
+<div class=post-footer>
+<time>October 13, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
 <a href=https://blog.jinreal.com/posts/uf-material-116/>
 【非真實地場】資料(116)
 </a>
@@ -196,26 +212,6 @@
 「甚至，連網吧都不如，更不用談數據中心了」D說。
 「就像早期只有性能很一般的個人電腦，甚至只有大型機，不可能有具有規模的分佈式處理」K說。
 V看到一段冰上運動的資料，突然想到一個朋友的父親，他是個體育教練，好像是訓練跑步的，當時體育數據分析還很初步甚至沒有。他工作的地方有一堆計時器、計步器等等。計數器和計步器&ndash;微型的機器，通常是結構非常簡單的機器，集中存放這些機器的地方也是討論專業訓練的地方，話題通常和極限、科學、以及人性有關。</p>
-</div>
-<div class=post-footer>
-<time>October 12, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-on-language/>
-【非真實地場】語言
-</a>
-</h2>
-<div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-成熟的米總是有大有小，但每一個都擁有質量&mldr;一樣大小的米，不可能是天然的 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-「或許這就是天然和人工的區別？」X說。
-「你是在說自然語言的某些本質」B說。
-「也就是為什麼有時候人工語言不像語言，有時候又太像語言？」C說。
-「有時候差異太大，有時候又太相似」F說。
-「很好」Z說。</p>
 </div>
 <div class=post-footer>
 <time>October 12, 2021</time>
