--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-謬論，數位化的真理，一種有理數。小數點之前是簡短的真話，之後永遠循環着謊言。它孜孜不倦的冒充著自然。
+男人與我比美？他一定很矮吧。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
