--- a/index.html
+++ b/index.html
@@ -46,6 +46,51 @@
 <div class=article-content>
 <article>
 <h2>
+<a href=https://blog.jinreal.com/posts/uf-material-121/>
+【非真實地場】資料(121)
+</a>
+</h2>
+<div>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+那個男人說唱歌根本不存在天賦？我聽過他的聲音，我估計他唱民族唱法挺適合的。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+</div>
+<div class=post-footer>
+<time>October 13, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
+<a href=https://blog.jinreal.com/posts/uf-material-120/>
+【非真實地場】資料(120)
+</a>
+</h2>
+<div>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+那個男人說我唱得像雞叫？雞嗓子，老師總這麼誇我。他是什麼嗓子？ =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+</div>
+<div class=post-footer>
+<time>October 13, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
+<a href=https://blog.jinreal.com/posts/uf-material-119/>
+【非真實地場】資料(119)
+</a>
+</h2>
+<div>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+那個男人說我美聲唱法唱得不夠高？他該先查查美聲唱法的發源地在哪。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+</div>
+<div class=post-footer>
+<time>October 13, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
 <a href=https://blog.jinreal.com/posts/uf-material-118/>
 【非真實地場】資料(118)
 </a>
@@ -154,58 +199,6 @@
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
 作者的風格、文字、結構，它們會一起成熟 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
 它們。。一起。。成熟。看到這些詞的瞬間，W像是明白了什麼。</p>
-</div>
-<div class=post-footer>
-<time>October 12, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-material-113/>
-【非真實地場】資料(113)
-</a>
-</h2>
-<div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-&ldquo;牛津期（英語：Oxfordian）是侏羅紀的第九個時期，年代大約位於163.5–157.3百萬年前。"&ndash;Wi&mldr; &mldr;
-侏羅紀共有11個時期，時間表最下方為最遠的時間，所以從上面數第3個即為該時期。
-=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
-</div>
-<div class=post-footer>
-<time>October 12, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-material-112/>
-【非真實地場】資料(112)
-</a>
-</h2>
-<div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-「作者的風格、文字、結構，它們會一起成熟」她說。
-它們一起成熟。他聽到這句話，像是明白了什麼。
-=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
-</div>
-<div class=post-footer>
-<time>October 12, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-material-111/>
-【非真實地場】資料(111)
-</a>
-</h2>
-<div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-&ldquo;明白這一點就行了，在我們自身內有一個人甚麼都知道，什麼都想要，什麼都比我們自己做得更好。&rdquo;
-&ldquo;形象和目的有外在的相似之處。&rdquo;
-&ndash;H·&mldr; &mldr;
-=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
 <time>October 12, 2021</time>
