deploy: fad22f1aad3f018e1268edf237c5ac9290780674

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-我的名字太山寨？要怪都怪這姓不好起名嘍，想起個有追求又好記的名字不容易，總不能叫南為你吧。叫南為我，那就更怪了。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+那個男人說我的名字太山寨？要怪都怪這姓不好起名嘍，想起個有追求又好記的名字不容易，總不能叫南為你吧。叫南為我，那就更怪了。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
 <time>October 13, 2021</time>
