--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-那個男人說我是最薄的那種書？他是在誇張嗎？確實有一種書，薄的只有幾頁紙，它的名字叫真理。人們把這種女人叫女神。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+那個男人說我的名字太差勁？起名的原因我已經說過了，再說，叫這個名字的太多了，連有些機構都叫這個名字。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
 <time>October 14, 2021</time>
