deploy: a345337ae62cfe1bb66eb985183663560f8e4d51

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-那個男人說我身上有煙味？確實有一種女人，她們身上寫的不是情愛。如果青春是一場戰爭，她們就是戰書。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+那個男人說我身上有煙味？確實有一種女人，她們身上寫的不是情愛。如果青春是一場戰爭，她們就是戰書，那連篇的不是紙而是火&ndash;戰火。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
 <time>October 14, 2021</time>
