--- a/index.html
+++ b/index.html
@@ -46,6 +46,27 @@
 <div class=article-content>
 <article>
 <h2>
+<a href=https://blog.jinreal.com/posts/uf-material-130/>
+【非真實地場】資料(130)
+</a>
+</h2>
+<div>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+&ldquo;人類世紀是根據希臘神話劃分的人類生活在地球上的不同時代。兩位古典著者分別對其進行了劃分，其開始於人類起源時期到著者生活的時期&mldr;《變形記》中也將人類世紀劃分為相似的四個時代，只是將英雄時代除去。
+奧維德用強調公正與和平定義了黃金時代，他還補充到，在這個時代，人類還不懂得航海技術，也沒有對世界進行探索。
+在白銀時代， 朱庇特為人類帶來了四季，人類開始學習農業和建築。
+對青銅時代，奧維德描寫到，人類陷入戰爭，但仍然保持著對眾神的信仰。
+最後的黑鐵時代，人類將土地劃分為國家，他們學會了航海和挖礦的技術，他們狂熱於戰爭，失去了信仰，變得無比的貪婪。真理、謙遜和忠誠再也無處可尋。&rdquo;
+&ndash;Wi&mldr; &mldr;
+=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+</div>
+<div class=post-footer>
+<time>October 14, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
 <a href=https://blog.jinreal.com/posts/uf-material-129/>
 【非真實地場】資料(129)
 </a>
@@ -173,21 +194,6 @@
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
 那個男人說我的名字太山寨？要怪都怪這姓不好起名嘍，想起個有追求又好記的名字不容易，總不能叫南為你吧。叫南為我，那就更怪了。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
-</div>
-<div class=post-footer>
-<time>October 13, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-material-120/>
-【非真實地場】資料(120)
-</a>
-</h2>
-<div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-那個男人說我唱得像雞叫？雞嗓子，老師總這麼誇我。他是什麼嗓子？ =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
 <time>October 13, 2021</time>
