--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-&ldquo;人類世紀是根據希臘神話劃分的人類生活在地球上的不同時代。兩位古典著者分別對其進行了劃分，其開始於人類起源時期到著者生活的時期&mldr;《變形記》中也將人類世紀劃分為相似的四個時代，只是將英雄時代除去。
+&ldquo;人類世紀是根據希臘神話劃分的人類生活在地球上的不同時代。兩位古典著者分別對其進行了劃分，其開始於人類起源時期到著者生活的時期&mldr;黑鐵時代 - 赫西俄德生活的時代被他命名為黑鐵時代。在這個時代裡，人類生活得痛苦而悲慘。人類妄圖統治一切，兒童不再信任父母，朋友不再相互信任，主人對待客人不再熱情，婚姻中的人們不再相愛，誓言也被他們視為塵埃。善良與公正已經不再被他們當作行為的準則，權力代表了正確，謊言代替了真誠。人類再也沒有了羞恥之心，最終神對人類失去了希望，眾神永遠地拋棄了人類：&ldquo;人類將再也得不到戰勝邪惡的幫助和庇護&rdquo;&mldr;《變形記》中也將人類世紀劃分為相似的四個時代，只是將英雄時代除去。
 奧維德用強調公正與和平定義了黃金時代，他還補充到，在這個時代，人類還不懂得航海技術，也沒有對世界進行探索。
 在白銀時代， 朱庇特為人類帶來了四季，人類開始學習農業和建築。
 對青銅時代，奧維德描寫到，人類陷入戰爭，但仍然保持著對眾神的信仰。
