deploy: 8aee11c9a02c6b36fb24c0fddbe4e11567f31e19

--- a/index.html
+++ b/index.html
@@ -46,6 +46,33 @@
 <div class=article-content>
 <article>
 <h2>
+<a href=https://blog.jinreal.com/posts/uf-material-135/>
+【非真實地場】資料(135)
+</a>
+</h2>
+<div>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+「你們這個數據挖掘，總是挖掘土豆紅薯的，你們不能挖深一點，挖挖土裡的東西，看看這土壤咋能改善改善呢」觀眾說。
+「哦，我們這些叫模式識別，和數據挖掘有些不同。土裡的那些。。可能要問農學家、化學家，我們只關注外形、重量等等」研究員說。
+「另外，樹上的蘋果芒果，我們也識別，也挖」研究員接著說。
+「那你們識別不識別空氣呢，現在的空氣。。天空好像感覺沒以前好」觀眾說。
+「那應該是環境學家研究的，我們除了識別植物，也識別動物，是大概一個小時前介紹的。。稍等。。就是這些。。一些動物」研究員迅速的翻到前面的幻燈片說。
+「哦。貓。。和狗。地球上有那麼多人需要幫助，計算機總和貓貓狗狗較什麼勁兒呢」觀眾說。
+「恩，這些是基礎，很多識別是重合的，它最初的認識很低級，但一旦熟悉起來就非常厲害」研究員說。
+「它不是分類嗎，它不知道機器和動物的區別嗎？」觀眾說。
+「它什麼也不懂，雖然它分類，但它並不知道自己是哪一類」研究員說。
+「什麼意思，它連自己是好機器還是壞機器都不知道嗎？」觀眾說。
+「恐怕比那還要差勁，它連自己是動物植物還是什麼都不知道，它甚至不知道自己有幾個部分」研究員說。
+「難道連。。連癡呆都不如嗎？」觀眾說。
+「哦，是的，在沒有充分訓練之前，我想是的」研究員說。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+</div>
+<div class=post-footer>
+<time>October 14, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
 <a href=https://blog.jinreal.com/posts/uf-material-134/>
 【非真實地場】資料(134)
 </a>
@@ -182,21 +209,6 @@
 </div>
 <div class=post-footer>
 <time>October 14, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-material-125/>
-【非真實地場】資料(125)
-</a>
-</h2>
-<div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-那個男人說我是最薄的那種書？他說的沒錯，女人就像一本書，有的女人是經典，雖然不那麼厚。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
-</div>
-<div class=post-footer>
-<time>October 13, 2021</time>
 <a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
 </div>
 </article>
