--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-「你們這個數據挖掘，總是挖掘土豆紅薯的，你們不能挖深一點，挖挖土裡的東西，看看這土壤咋能改善改善呢」觀眾說。
+「你們這個數據挖掘，總是挖掘土豆紅薯的，你們不能挖深一點，挖挖土裡的東西，看看這土壤裡有啥，能不能改善改善」觀眾說。
 「哦，我們這些叫模式識別，和數據挖掘有些不同。土裡的那些。。可能要問農學家、化學家，我們只關注外形、重量等等」研究員說。
 「另外，樹上的蘋果芒果，我們也識別，也挖」研究員接著說。
 「那你們識別不識別空氣呢，現在的空氣。。天空好像感覺沒以前好」觀眾說。
