deploy: fb8f216b82484891fc36011a41d354b1b438dcdb

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
 飛行，人類稱為訓練的東西。
-我們每天都在飛行，我們每天都在訓練。在林中、風中、海面、懸崖間。
+我們每天都在飛行，我們每天都在訓練。在林中、風中、海上、懸崖間。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
