--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-那個男人說我站得太直太硬？確實有一種書，皮是軟的，紙是硬的，足以立起來。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+那個男人說我站得太直太硬？確實有一種書，皮是軟的，紙是硬的，能直直的立起來。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
 <time>October 14, 2021</time>
