deploy: 4b62e68a74f1a5f0d6c5afa9de80105c3d48d847

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-那個男人問我為什麼這麼慢？慢和穩是一個意思，已經問過了，下一個。
+那個男人問我為什麼這麼慢？慢和穩是同一個意思，已經問過了，下一個。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
