--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-那個男人要我詳細說說為什麼這麼慢？不是說過了嗎？哦對，是不是他的時間太快了，他用的是什麼WATCH？AWATCH？那恐怕不行，我們都用NWATCH，起碼JWATCH。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+那個男人要我詳細說說為什麼這麼慢？不是說過了嗎？哦對，是不是他的時間太快了，他用的是什麼WATCH？AWATCH？那恐怕不行，我們一般用NWATCH，起碼JWATCH。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
 <time>October 16, 2021</time>
