deploy: 016be1c1b5557c2481dbaa65c4896447fd9ed5fb

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-那個男人讓我好好說說為什麼這麼快？我不是說過了嗎？哦對，是不是他的鞋太滑了，他穿的是什麼SHOE？ZSHOE？好像沒聽說過，我們一般用NSHOE，起碼ESHOE。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+那個男人讓我好好說說為什麼這麼快？我不是說過了嗎？哦對，是不是他的鞋太滑了，他穿的是什麼SHOE？ASHOE？好像沒聽說過，我們一般用NSHOE，起碼KSHOE。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
 <time>October 16, 2021</time>
@@ -98,7 +98,7 @@
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-那個男人讓我仔細說說為什麼這麼慢？我不是說過了嗎？哦對，是不是他的時間太快了，他用的是什麼WATCH？AWATCH？好像沒聽說過，我們一般用JWATCH，起碼NWATCH。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+那個男人讓我仔細說說為什麼這麼慢？我不是說過了嗎？哦對，是不是他的時間太快了，他用的是什麼WATCH？ZWATCH？好像沒聽說過，我們一般用AWATCH，起碼JWATCH。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
 <time>October 16, 2021</time>
