--- a/index.html
+++ b/index.html
@@ -61,26 +61,6 @@
 </article>
 <article>
 <h2>
-<a href=https://blog.jinreal.com/posts/uf-on-number/>
-【非真實地場】數目
-</a>
-</h2>
-<div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-成熟的米總是有大有小，但每一個都擁有質量&mldr;一樣大小的米，不可能是天然的 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-「或許這就是天然和人工的區別？」X說。
-「你是在說自然語言的某些本質」B說。
-「也就是為什麼有時候人工語言不像語言，有時候又太像語言？」C說。
-「有時候差異太大，有時候又太相似」F說。
-「很好」Z說。</p>
-</div>
-<div class=post-footer>
-<time>October 16, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
 <a href=https://blog.jinreal.com/posts/uf-material-151/>
 【非真實地場】資料(151)
 </a>
@@ -196,6 +176,22 @@
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
 自信，只有女人討論這個話題嗎？ =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+</div>
+<div class=post-footer>
+<time>October 16, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
+<a href=https://blog.jinreal.com/posts/uf-material-143/>
+【非真實地場】資料(143)
+</a>
+</h2>
+<div>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+那個男人說我的作品只有女的會看？這是批我還是誇我？這種評價。。似乎太不專業。
+=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
 <time>October 16, 2021</time>
