deploy: 23c34190382be8feeafe4f03d6322d63ec9af910

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-我的舊瓶子放哪裡去了？瓶子、盒子，這些我不可能知道扔哪裡去了，這我可能得問化妝助理。
+我的舊瓶子放哪裡去了？瓶子、盒子，這些我不可能知道扔到什麼地方去了，這我可能得問化妝助理。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
