deploy: 73d388b6ee178126aab351f28c84ec0259e72218

--- a/index.html
+++ b/index.html
@@ -46,6 +46,22 @@
 <div class=article-content>
 <article>
 <h2>
+<a href=https://blog.jinreal.com/posts/uf-material-164/>
+【非真實地場】資料(164)
+</a>
+</h2>
+<div>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+&ldquo;人生是樹林裡的大樹,我們只是穿行而過的風。"&ndash; H&mldr; &mldr;
+=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+</div>
+<div class=post-footer>
+<time>October 18, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
 <a href=https://blog.jinreal.com/posts/uf-material-163/>
 【非真實地場】資料(163)
 </a>
@@ -53,8 +69,8 @@
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
 有些人覺得R深沉，R也經常說他喜歡秋天。我真想讓他們看看，這個所謂的深沉的男人纏著我念的是怎樣傻逼的兒童故事，對，兒童故事。
-沒辦法，要求越來越高。我知道，只有我說點什麼唱點什麼他才睡得好，他就是想听我發出點聲音，任何聲音。
-他可能是想起了我當年寫的那些小小說，但他需要的是這些嗎？他需要的，或許是寓言。難道我要給他專門寫一本寓言嗎？ =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+沒辦法，要求越來越高。我知道，可能只有我說點什麼唱點什麼他才睡得好，他就是想听我發出點聲音，任何聲音。
+他可能是想起了我當年寫的那些小小說，但他需要的是這些嗎？他需要的，或許是寓言。難道還要我給他寫一本寓言嗎？ =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
 <time>October 18, 2021</time>
@@ -191,24 +207,6 @@
 </div>
 <div class=post-footer>
 <time>October 17, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-material-154/>
-【非真實地場】資料(154)
-</a>
-</h2>
-<div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-飛行&ndash;一種未經專業訓練即擁有的能力，人們稱之為天賦。
-我們天生具有飛行能力，我們是飛行類，翅、又稱翼，我們身體不可分割的一部分。
-那是神聖的？對，神聖不可分割。
-=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
-</div>
-<div class=post-footer>
-<time>October 16, 2021</time>
 <a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
 </div>
 </article>
